LPS-45878 - Fixing side-effect of window scroll (have to use !important as there's no other way to either lower the sidebar's z-index or raise the proxy's z-index, since it's set inline in YUI)

--- a/portal-web/docroot/html/themes/_styled/css/application.css
+++ b/portal-web/docroot/html/themes/_styled/css/application.css
@@ -77,6 +77,10 @@
 	margin: 2px 0;
 }
 
+.yui3-dd-proxy {
+	z-index: 1110 !important;
+}
+
 /* ---------- Portal tool tips ---------- */
 
 .tooltip {
